hphp/test/slow/ext_preg/t83614717.php.expectf
Fatal error: String length exceeded: 4294967297 > %d in %s/t83614717.php on line 7
